Added new team members and updated manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "TechDom",
-  "short_name": "TechDom GST App",
+  "name": "TechDom GST App",
+  "short_name": "GST PQ",
   "icons":[
     {
       
